# nukex3

./: .gitignore  .mcp.json  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  Makefile
docs/plans/: 2026-03-05-design-decisions.md  2026-03-05-implementation-plan.md  2026-03-05-library-research.md  2026-03-05-nukex-v3-design.md  2026-03-06-alignment-design.md  2026-03-06-alignment-implementation.md  2026-03-08-rgb-autostretch-design.md  2026-03-08-rgb-autostretch-implementation.md  2026-03-09-code-review-fixes.md  2026-03-11-gpu-acceleration-design.md  2026-03-11-gpu-acceleration-implementation.md
docs/superpowers/plans/: 2026-03-13-post-stretch-subcube-remediation.md  2026-03-17-z-plane-metadata-tiebreaker.md  2026-03-18-post-stretch-dust-detection.md  2026-03-20-edge-referenced-dust-correction.md  2026-03-20-flat-calibration.md  2026-03-23-parallel-frame-loading.md  2026-03-23-remove-gpu-max-subs-limit.md  2026-03-24-frame-trail-detection.md
docs/superpowers/specs/: 2026-03-13-post-stretch-subcube-remediation-design.md  2026-03-17-subcube-dust-detection-design.md  2026-03-17-z-plane-metadata-tiebreaker-design.md  2026-03-18-aggregate-subcube-verification-amendment.md  2026-03-19-radial-profile-dust-verification.md  2026-03-23-affine-alignment-design.md  2026-03-23-parallel-frame-loading-design.md  2026-03-24-frame-trail-detection-design.md
repository/: updates.xri
src/: NukeXModule.cpp  NukeXModule.h  NukeXStackInstance.cpp  NukeXStackInstance.h  NukeXStackInterface.cpp  NukeXStackInterface.h  NukeXStackParameters.cpp  NukeXStackParameters.h  NukeXStackProcess.cpp  NukeXStackProcess.h  NukeXStretchInstance.cpp  NukeXStretchInstance.h  NukeXStretchInterface.cpp  NukeXStretchInterface.h  NukeXStretchParameters.cpp  NukeXStretchParameters.h  NukeXStretchProcess.cpp  NukeXStretchProcess.h
src/engine/: ArtifactDetector.cpp  ArtifactDetector.h  AutoStretchSelector.cpp  AutoStretchSelector.h  DistributionFitter.cpp  DistributionFitter.h  DustCorrector.cpp  DustCorrector.h  FlatCalibrator.cpp  FlatCalibrator.h  FlatEstimator.cpp  FlatEstimator.h  FrameAligner.cpp  FrameAligner.h  FrameLoader.cpp  FrameLoader.h  GaussianMixEM.cpp  GaussianMixEM.h  IStretchAlgorithm.cpp  IStretchAlgorithm.h  NumericalUtils.h  OutlierDetector.cpp  OutlierDetector.h  PixelSelector.cpp  PixelSelector.h  QualityWeights.cpp  QualityWeights.h  SkewNormalFitter.cpp  SkewNormalFitter.h  StarDetector.cpp  StarDetector.h  StretchLibrary.cpp  StretchLibrary.h  SubCube.h  TrailDetector.cpp  TrailDetector.h  TriangleMatcher.cpp  TriangleMatcher.h
src/engine/algorithms/: ArcSinhStretch.cpp  ArcSinhStretch.h  GHStretch.cpp  GHStretch.h  HistogramStretch.cpp  HistogramStretch.h  LogStretch.cpp  LogStretch.h  LumptonStretch.cpp  LumptonStretch.h  MTFStretch.cpp  MTFStretch.h  OTSStretch.cpp  OTSStretch.h  PhotometricStretch.cpp  PhotometricStretch.h  RNCStretch.cpp  RNCStretch.h  SASStretch.cpp  SASStretch.h  VeraluxStretch.cpp  VeraluxStretch.h
src/engine/cuda/: CudaPixelSelector.cu  CudaPixelSelector.h  CudaRemediation.cu  CudaRemediation.h  CudaRuntime.cpp  CudaRuntime.h  CudaWorkspace.h
tests/: CMakeLists.txt
tests/integration/: test_full_pipeline.cpp
tests/unit/: test_adaptive_models.cpp  test_artifact_detector.cpp  test_auto_stretch_selector.cpp  test_cuda_equivalence.cpp  test_cuda_remediation.cpp  test_distribution_fitter.cpp  test_dust_corrector.cpp  test_flat_calibrator.cpp  test_frame_aligner.cpp  test_gaussian_mix_em.cpp  test_numerical_utils.cpp  test_outlier_detector.cpp  test_pixel_selector.cpp  test_quality_weights.cpp  test_skew_normal_fitter.cpp  test_star_detector.cpp  test_stretch_algorithms.cpp  test_sub_cube.cpp  test_trail_detector.cpp  test_triangle_matcher.cpp
